# webdev-book

./: .gitignore  Cargo.toml  docker-compose.yaml  log4rs.yaml  questions.json
.cargo/: config.toml
db/: Dockerfile  init.sql
db/migrations/: 0002_answers_table.up.sql
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 0001_questions_table.up.sql  0002_answers_table.up.sql
playground/bad-words/: Cargo.toml
playground/bad-words/.cargo/: config.toml
playground/bad-words/src/: main.rs
server/: Cargo.toml
server/db/: Dockerfile
server/db/migrations/: 0001_questions_table.up.sql
server/migrations/: 0003_create_accounts_table.up.sql
server/src/: error.rs  filters.rs  main.rs  store.rs
server/src/answers/: handlers.rs  mod.rs  routes.rs
server/src/api/: mod.rs
server/src/authentication/: handlers.rs  mod.rs  routes.rs
server/src/questions/: handlers.rs  mod.rs  routes.rs
server/src/types/: account.rs  answer.rs  mod.rs  question.rs
src/: error.rs  filters.rs  main.rs  store.rs
src/answers/: handlers.rs  mod.rs  routes.rs
src/api/: bad_words.rs
src/handlers/: answers.rs  mod.rs  questions.rs
src/questions/: handlers.rs  mod.rs  routes.rs
src/routes/: answers.rs  mod.rs  questions.rs
src/types/: account.rs  answer.rs  mod.rs  pagination.rs  question.rs
webdev_book/: .env  Cargo.toml  example.env  setup.toml
webdev_book/migrations/: 0003_create_accounts_table.down.sql  0004_extended_questions_table.down.sql  0004_extended_questions_table.up.sql  0005_extend_answers_table.down.sql  0005_extend_answers_table.up.sql
webdev_book/src/: error.rs  filters.rs  main.rs  store.rs
webdev_book/src/answers/: handlers.rs  mod.rs  routes.rs
webdev_book/src/api/: bad_words.rs
webdev_book/src/authentication/: handlers.rs  mod.rs
webdev_book/src/questions/: handlers.rs  mod.rs  routes.rs
webdev_book/src/types/: answer.rs  authentication.rs  mod.rs  pagination.rs  question.rs
