[package]
name = "webdev-book"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#reqwest = { version = "0.11", features = ["json"] }
warp = "0.3.6"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "migrate", "postgres", "time"] }
reqwest = { version = "0.11.24", features = ["json"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
thiserror = "1.0.49"
